2001-12-20  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am: Clean up

	* default-application-properties.c (main): Call gtk_main, not
	capplet_gtk_main

	* interface.c: Don't #include capplet-widget.h

2001-12-19  Seth Nickell  <snickell@stanford.edu>

	* default-applications.desktop.in.in:

	Add Categories field so it shows up under the
	Settings submenu in the panel menus.

2001-12-08  Richard Hestilow  <hestilow@ximian.com>

	* Port to GConf.

2001-12-01  Richard Hestilow  <hestilow@ximian.com>

	* Initial GNOME2 port.

2001-08-18  Abel Cheung  <maddog@linux.org.hk>

	* interface.c (edit_create): Fixed a string (cut 'n paste is source
	  of all evil)

2001-07-31  Chema Celorio  <chema@celorio.com>

	* Makefile.am (cappletname): add DISTDIR to install-data-local

2001-07-27  Bradford Hovinen  <hovinen@ximian.com>

	* RELEASE : 1.5.2

2001-07-25  Chema Celorio  <chema@celorio.com>

	* Makefile.am: remove the DESKTOP_IN_RULE and copy the sed here

2001-07-23  Richard Hestilow  <hestilow@ximian.com>

	* callbacks.c (on_radiodefeditor_toggled): Only set_selected_editor
	if the button is enabled.
	(on_seldefbrowser_toggled): Ditto.
	(on_seldefview_toggled): Ditto.
	(on_seldefterm_toggled): Ditto.

	* default-application-properties.c (fill_editor_data): Fix widget
	name typo.

2001-07-20  Chema Celorio  <chema@celorio.com>

	* RELEASE : 1.5.0

2001-07-19  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am: Remove SUBDIRS

2001-07-18  Chema Celorio  <chema@celorio.com>

	* default-applications.desktop.in.in (Exec): use the right binary name

	* Makefile.am (INCLUDES): we are not using GNOMESYSCONFDIR. remove

2001-07-17  Chema Celorio  <chema@celorio.com>

	* Makefile.am (SUBDIRS): clean

2001-07-17  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am (default_application_properties_capplet_SOURCES):
	Added header files, including missing defaults.h
	(EXTRA_DIST): Removed header files

2001-07-16  Chema Celorio  <chema@celorio.com>
